// Copyright 2022 The Tari Project
// SPDX-License-Identifier: BSD-3-Clause

syntax = "proto3";

import "common/transaction.proto";

package tari.mempool;

message TransactionInventory {
  // A list of kernel excess sigs used to identify transactions
  repeated bytes items = 1;
}

message TransactionItem {
  tari.common.Transaction transaction = 1;
}

message InventoryIndexes {
  repeated uint32 indexes = 1;
}
